# LLMTranslator

./: .gitignore  README.md  build.spec  installer.iss  pyproject.toml
assets/: light.qss
docs/superpowers/plans/: 2026-06-22-llm-translator.md  2026-07-08-screenshot-ocr.md  2026-07-08-selection-translation.md  2026-07-08-tts.md  2026-07-10-document-translation.md
docs/superpowers/specs/: 2026-06-22-llm-translator-design.md  2026-07-08-document-translation-design.md  2026-07-08-screenshot-ocr-design.md  2026-07-08-selection-translation-design.md  2026-07-08-tts-design.md
scripts/: round_icon_corners.py
src/llm_translator/: main.py
src/llm_translator/auth/: login.py  store.py
src/llm_translator/core/: doc_translate.py  hotkey.py  language.py  ocr.py  prompt.py  screen_capture.py  selection.py  translator.py  tts.py
src/llm_translator/providers/: base.py  registry.py
src/llm_translator/storage/: history.py  paths.py  settings.py
src/llm_translator/ui/: async_bridge.py  capture_overlay.py  document_dialog.py  history_dialog.py  login_dialog.py  main_window.py  ocr_result.py  selection_popup.py  settings_dialog.py  tts_player.py  widgets.py
tests/: conftest.py  test_credential_store.py  test_doc_translate.py  test_history.py  test_hotkey.py  test_language.py  test_main_window_menu.py  test_ocr.py  test_openai_compat.py  test_paths.py  test_prompt.py  test_proxy.py  test_registry.py  test_selection_popup.py  test_settings.py  test_settings_dialog.py  test_sse.py  test_translator.py  test_tts.py  test_web_deepseek.py  test_web_glm.py  test_web_kimi.py  test_widgets.py
(+8 files in other folders)
