[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-translator"
version = "0.1.0"
description = "跨平台桌面级大模型翻译软件"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "PySide6-Addons>=6.6",
    "qasync>=0.27",
    "httpx>=0.27",
    "curl_cffi>=0.7",
    "cryptography>=42",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pyinstaller>=6",
]

[project.scripts]
llm-translator = "llm_translator.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
