[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-translator"
version = "0.2.0"
description = "跨平台桌面级大模型翻译软件"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "PySide6-Addons>=6.6",
    "qasync>=0.27",
    "httpx>=0.27",
    "curl_cffi>=0.7",
    "cryptography>=42",
    "platformdirs>=4.2",
    "edge-tts>=6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pyinstaller>=6",
]
# DeepSeek 网页翻译的 PoW 求解需要跑 WASM，故为可选依赖（不影响核心/付费 API）。
# 安装：pip install "llm-translator[web]"
web = [
    "wasmtime>=20",
    "numpy>=1.26",
]

[project.scripts]
llm-translator = "llm_translator.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
